--- a/POSC 521 MPA Capstone/2024-25 Fall/posc521_2024_fall.tex
+++ b/POSC 521 MPA Capstone/2024-25 Fall/posc521_2024_fall.tex
@@ -293,11 +293,23 @@ This AI policy is designed to align with our course objectives:
 
 \noindent These assessment methods will help ensure that AI use is enhancing, rather than replacing, critical thinking and analytical skills essential to public administration.
 
+\section*{Kritik}
+\noindent This course will use the peer review platform \href{https://kritik.io/}{Kritik} for peer review assignments. Kritik is an online platform that allows students to provide feedback on their classmates' work. Students will be assigned to review the work of their peers and provide constructive feedback. Students will also receive feedback from their peers on their own work. The professor will use Kritik to monitor the peer review process and provide guidance as needed.
+
+\vspace{1em}    
+\noindent Kritik is designed to help students develop their critical thinking and analytical skills by evaluating and providing feedback on their classmates' work. Students are expected to provide constructive feedback that will help their peers improve their work. The professor will provide guidelines and training on how to use Kritik effectively.
+
+\vspace{1em}
+
+\noindent Kritik assignments are organized in three stages: submission, review, and evaluate. Students will submit their work, review the work of their peers, and evaluate the feedback they receive. The professor will monitor the process and provide guidance as needed. Students are expected to complete all stages of the Kritik assignments on time and in accordance with the guidelines provided by the professor. Grades for Kritik assignments will be based on the quality of the feedback provided and the completion of all stages of the assignment.
+
+\vspace{1em}
+\noindent The Kritik platform will be used for the weekly syntheses and the concentration area literature review assignments. Students are expected to familiarize themselves with the platform and use it to complete the peer review assignments. The professor will provide guidance and support as needed to ensure that students can use Kritik effectively.
 \section{Course Requirements}
 
 \subsection*{1) Weekly Annotated Bibliography, Synthesis, and Reflection}
 
-To facilitate class discussions and prepare you for comprehensive exams, your weekly writing assignment comprises two main components: an annotated bibliography of each weekly reading and a 2- to 3-page synthesis of the week's readings. You may also submit a personal reflection for bonus points. 
+To facilitate class discussions and prepare you for comprehensive exams, your weekly writing assignment comprises two main components: an annotated bibliography of each weekly reading and a 3- to 5-page synthesis of the week's readings. You may also submit a personal reflection for bonus points. 
 
 \subsubsection*{Definitions}
 \begin{itemize}
@@ -355,7 +367,8 @@ To facilitate class discussions and prepare you for comprehensive exams, your we
 \item \textbf{Synthesis}
 
 \begin{itemize}
-    \item \textbf{Purpose}: Integrate main themes and insights from weekly readings, discussing their implications for public administration.
+    \item \textbf{Purpose}: Integrate main themes and insights from weekly readings, discussing their implications for public administration. \textbf{This portion of the assignment conducted on the Kritik platform. All papers should be submitted anonymously to ensure unbiased feedback.}
+   
     \item \textbf{Process}:
     \begin{itemize}
         \item Write a 4- to 5-page synthesis, focusing on:
@@ -429,7 +442,10 @@ Students will complete a comprehensive general area essay exam as part of the MP
 
 \subsubsection*{Literature Review}
 
-Students will complete a literature review in their concentration area as part of the MPA program's comprehensive exam requirement. The literature review will examine the practical and theoretical issues related to a specific public administration topic and synthesize the essential findings and debates in the literature. The literature review will allow students to deepen their knowledge of their concentration area and develop their research and writing skills. A peer review process will be used to provide feedback on the literature review, and students will have the opportunity to revise and resubmit their work based on the feedback received. Peer reviews will be conducted anonymously on \emph{Canvas}, and students will be assigned to review the work of their classmates. The final draft of the literature review will be submitted on \emph{Canvas} and graded by the professor. The length of the literature review will be approximately 15 pages, double-spaced, in APA or Chicago author-date style.
+Students will complete a literature review in their concentration area as part of the MPA program's comprehensive exam requirement. The literature review will examine the practical and theoretical issues related to a specific public administration topic and synthesize the essential findings and debates in the literature. The literature review will allow students to deepen their knowledge of their concentration area and develop their research and writing skills. The length of the literature review will be approximately 15 pages, double-spaced, in APA or Chicago author-date style.
+
+A peer review process will be used to provide feedback on each component of the literature review, including the topic selection, annotated bibliography, draft, and final draft. The peer review process will help students refine their work and improve their writing and analytical skills. The final draft of the literature review will be graded based on the following criteria. All submissions should be anonymous to ensure unbiased feedback.
+
 
 \paragraph*{Objectives:}
 \begin{itemize}
