--- a/POSC 521 MPA Capstone/2024-25 Fall/posc521_2024_fall.tex
+++ b/POSC 521 MPA Capstone/2024-25 Fall/posc521_2024_fall.tex
@@ -293,7 +293,7 @@ This AI policy is designed to align with our course objectives:
 
 \noindent These assessment methods will help ensure that AI use is enhancing, rather than replacing, critical thinking and analytical skills essential to public administration.
 
-\section*{Kritik}
+\section{Kritik}
 \noindent This course will use the peer review platform \href{https://kritik.io/}{Kritik} for peer review assignments. Kritik is an online platform that allows students to provide feedback on their classmates' work. Students will be assigned to review the work of their peers and provide constructive feedback. Students will also receive feedback from their peers on their own work. The professor will use Kritik to monitor the peer review process and provide guidance as needed.
 
 \vspace{1em}    
