--- a/POSC 521 MPA Capstone/2024-25 Fall/posc521_2024_fall.tex
+++ b/POSC 521 MPA Capstone/2024-25 Fall/posc521_2024_fall.tex
@@ -293,20 +293,31 @@ This AI policy is designed to align with our course objectives:
 
 \noindent These assessment methods will help ensure that AI use is enhancing, rather than replacing, critical thinking and analytical skills essential to public administration.
 
-\section{Kritik}
+ 
+
+\section*{Kritik: Peer Review Platform}
+
 \noindent This course will use the peer review platform \href{https://kritik.io/}{Kritik} for peer review assignments. Kritik is an online platform that allows students to provide feedback on their classmates' work. Students will be assigned to review the work of their peers and provide constructive feedback. Students will also receive feedback from their peers on their own work. The professor will use Kritik to monitor the peer review process and provide guidance as needed.
 
-\vspace{1em}    
-\noindent Kritik is designed to help students develop their critical thinking and analytical skills by evaluating and providing feedback on their classmates' work. Students are expected to provide constructive feedback that will help their peers improve their work. The professor will provide guidelines and training on how to use Kritik effectively.
-
-\vspace{1em}
-
-\noindent Kritik assignments are organized in three stages: submission, review, and evaluate. Students will submit their work, review the work of their peers, and evaluate the feedback they receive. The professor will monitor the process and provide guidance as needed. Students are expected to complete all stages of the Kritik assignments on time and in accordance with the guidelines provided by the professor. Grades for Kritik assignments will be based on the quality of the feedback provided and the completion of all stages of the assignment.
-
-\vspace{1em}
 \noindent The Kritik platform will be used for the weekly syntheses and the concentration area literature review assignments. Students are expected to familiarize themselves with the platform and use it to complete the peer review assignments. The professor will provide guidance and support as needed to ensure that students can use Kritik effectively.
-\section{Course Requirements}
 
+\subsection*{Kritik Overview}
+
+\begin{itemize}
+
+\item \textbf{A Three-Stage Learning Journey:}
+
+\begin{enumerate}
+    \item Craft Your Analysis: Follow the provided rubric and delve into a public policy challenge. This could involve, for example, evaluating the ethical implications of a proposed environmental regulation or assessing the effectiveness of a social welfare program.
+    \item Provide Constructive Critique: Anonymously evaluate your peers' work using the rubric. Offer actionable feedback that focuses on the strengths and weaknesses of their analysis, drawing connections to relevant public administration concepts.
+    \item Reflect and Improve: Receive anonymous feedback on the quality and impact of your comments. Learn to deliver clear, concise, and impactful feedback—a crucial skill for public servants collaborating on complex issues.
+\end{enumerate}
+
+\item \textbf{Grading and Participation:} You'll earn four scores for each Kritik activity: Creation, Evaluation, Feedback, and Overall. These scores, along with active participation, will contribute to your course grade. Participating thoughtfully in Kritik activities will not only improve your own skills but also enrich the learning experience for your peers.
+
+\item \textbf{Registration and Support:} We'll thoroughly introduce Kritik in class, and a dedicated email invitation will guide you through registration and course enrollment. The Kritik Help Center offers additional resources, and I'm always available to address any questions or concerns.
+\end{itemize}
+\section{Course Requirements}
 \subsection*{1) Weekly Annotated Bibliography, Synthesis, and Reflection}
 
 To facilitate class discussions and prepare you for comprehensive exams, your weekly writing assignment comprises two main components: an annotated bibliography of each weekly reading and a 3- to 5-page synthesis of the week's readings. You may also submit a personal reflection for bonus points. 
