--- a/POSC 521 MPA Capstone/2024-25 Fall/posc521_2024_fall.tex
+++ b/POSC 521 MPA Capstone/2024-25 Fall/posc521_2024_fall.tex
@@ -298,7 +298,7 @@ This AI policy is designed to align with our course objectives:
 \section*{Kritik: Peer Review Platform}
 
 \noindent This course will use the peer review platform \href{https://kritik.io/}{Kritik} for peer review assignments. Kritik is an online platform that allows students to provide feedback on their classmates' work. Students will be assigned to review the work of their peers and provide constructive feedback. Students will also receive feedback from their peers on their own work. The professor will use Kritik to monitor the peer review process and provide guidance as needed.
-
+\vspace{0.5em}
 \noindent The Kritik platform will be used for the weekly syntheses and the concentration area literature review assignments. Students are expected to familiarize themselves with the platform and use it to complete the peer review assignments. The professor will provide guidance and support as needed to ensure that students can use Kritik effectively.
 
 \subsection*{Kritik Overview}
