--- a/POSC 315 Intro Policy/2024-25 Fall/posc315_fall_2024.tex
+++ b/POSC 315 Intro Policy/2024-25 Fall/posc315_fall_2024.tex
@@ -15,7 +15,7 @@
 \renewcommand\familydefault{\sfdefault}
 
 \begin{document}
-\title{\includegraphics[width=6cm]{/home/snags/Nextcloud/Syllabi/Images/stacked.png} \\\vspace{1ex} \textbf{Introduction to Public Policy}}
+\title{\includegraphics[width=6cm]{/home/dadams/Repos/syllabi/Images/stacked.png} \\\vspace{1ex} \textbf{Introduction to Public Policy}}
 
 \author{POSC 315-02 -- Fall 2024}
 \date{Tuesdays and Thursdays at 11:30 in MH 554 \\\vspace{2ex} \textsc{August 26 -- December 13, 2024}}
@@ -89,9 +89,9 @@ By the end of this course, students will be able to
 \section{Text Books}
 
 
-\paragraph{}\noindent Kraft, Michael E. and Scott R. Furlong. 2025. \emph{Public Policy: Politics, Analysis, and Alternatives}. 8th ed. CQ Press: Thousand Oaks, Calif.
+\paragraph{}\noindent \textbf{Required}: Kraft, Michael E. and Scott R. Furlong. 2025. \emph{Public Policy: Politics, Analysis, and Alternatives}. 8th ed. CQ Press: Thousand Oaks, Calif.
 
-\paragraph{}\noindent Smith, Kevin B. and Christopher W. Larimer. 2017. \emph{The Public Policy Theory Primer}. 3rd ed. Westview Press: Boulder, Colo.
+\paragraph{}\noindent \emph{Recommended}: Smith, Kevin B. and Christopher W. Larimer. 2017. \emph{The Public Policy Theory Primer}. 3rd ed. Westview Press: Boulder, Colo.
 
 \section{Technical Competencies}
 
@@ -164,7 +164,7 @@ All written work must be submitted in a professional format, including proper gr
 Plagiarism is a serious violation of academic integrity and will not be tolerated in this course. Plagiarism includes, but is not limited to, copying and pasting text from sources without proper citation, paraphrasing text from sources without proper citation, and submitting work that is not your own. Students are expected to properly cite all sources used in their work and to submit original work. Failure to do so may result in a failing grade for the assignment and further disciplinary action. Written work will be checked for plagiarism using plagiarism detection software.
 
 \subsection*{AI Generated Text} 
-Large language models, such as OpenAI's ChatGPT-4o, Anthropic's Claude Opus 3, and others, have made it easier to generate text that mimics human writing. While these models can be useful for generating ideas and content, they can also be misused to produce work that is not original. Students are expected to use AI-generated text responsibly and to ensure that all work submitted in this course is their own. Failure to do so may result in a failing grade for the assignment and further disciplinary action. Written work will be checked for the use of AI-generated text using plagiarism detection software.
+Large language models, such as OpenAI's ChatGPT-4o, Anthropic's Claude Opus 3, and others, have made it easier to generate text that mimics human writing. While these models can be useful for generating ideas and content, it is important for students to exercise caution and ensure that all work submitted in this course is their own. With the increasing proficiency of students in using these models, it is crucial to emphasize the importance of academic integrity and originality. Students are expected to use AI-generated text responsibly and to avoid any form of plagiarism. Failure to do so may result in severe consequences, including a failing grade for the assignment and further disciplinary action. Written work will be thoroughly checked for the use of AI-generated text using advanced plagiarism detection software. It is essential for students to uphold the highest standards of academic integrity and to produce their own original work.
 
 \subsection*{Participation}
 
@@ -175,6 +175,29 @@ Students are expected to adhere to the university's policy on netiquette. The un
 \begin{quote}Netiquette refers to a set of behaviors that are appropriate for online activity (e.g., social media, email, discussions, presentations). All personnel at Cal State Fullerton are expected to demonstrate appropriate online behavior at all times. A good summary of netiquette can be found in the \href{https://canvashelp.fullerton.edu/m/Student/l/1336786-student-what-is-netiquette}{CSUF Canvas self-help guides}, which adapts ten rules to the online course situation from the website for the book \href{http://www.albion.com/netiquette/corerules.html}{Netiquette by Virginia Shea} and other sources referenced at the bottom of the guide.\end{quote}
 
 
+\section*{Kritik: Peer Review Platform}
+
+\noindent This course will use the peer review platform \href{https://kritik.io/}{Kritik} for peer review assignments. Kritik is an online platform that allows students to provide feedback on their classmates' work. Students will be assigned to review the work of their peers and provide constructive feedback. Students will also receive feedback from their peers on their own work. The professor will use Kritik to monitor the peer review process and provide guidance as needed.
+
+\subsection*{Kritik Assignments}
+\noindent The Kritik platform will be used for the weekly syntheses and the concentration area literature review assignments. Students are expected to familiarize themselves with the platform and use it to complete the peer review assignments. The professor will provide guidance and support as needed to ensure that students can use Kritik effectively.
+
+\subsection*{Kritik Overview}
+
+\begin{itemize}
+
+\item \textbf{A Three-Stage Learning Journey:}
+
+\begin{enumerate}
+    \item Craft Your Analysis: Follow the provided rubric and delve into a public policy challenge. This could involve, for example, evaluating the ethical implications of a proposed environmental regulation or assessing the effectiveness of a social welfare program.
+    \item Provide Constructive Critique: Anonymously evaluate your peers' work using the rubric. Offer actionable feedback that focuses on the strengths and weaknesses of their analysis, drawing connections to relevant public administration concepts.
+    \item Reflect and Improve: Receive anonymous feedback on the quality and impact of your comments. Learn to deliver clear, concise, and impactful feedback—a crucial skill for public servants collaborating on complex issues.
+\end{enumerate}
+
+\item \textbf{Grading and Participation:} You'll earn four scores for each Kritik activity: Creation, Evaluation, Feedback, and Overall. These scores, along with active participation, will contribute to your course grade. Participating thoughtfully in Kritik activities will not only improve your own skills but also enrich the learning experience for your peers.
+
+\item \textbf{Registration and Support:} We'll thoroughly introduce Kritik in class, and a dedicated email invitation will guide you through registration and course enrollment. The Kritik Help Center offers additional resources, and I'm always available to address any questions or concerns.
+\end{itemize}
 \section{Course Assignment Descriptions}
 \subsection*{Discussion Posts (20\% of Final Grade)} 
 \begin{itemize}
@@ -186,7 +209,7 @@ Students are expected to adhere to the university's policy on netiquette. The un
 
 \subsection*{Policy Process Analysis Paper (35\% of Final Grade)}
 
-This course includes a scaffolded and peer-reviewed writing project where students will analyze a specific policy issue through the lens of policy process theories. The project will be completed in stages, with opportunities for peer review and feedback at each stage.
+This course includes a scaffolded and peer-reviewed writing project where students will analyze a specific policy issue through the lens of policy process theories. The project will be completed in stages, with opportunities for peer review and feedback at each stage. The final paper will be a 10-12 page policy process analysis paper that applies policy process theories to understand the selected policy issue's development, implementation, and/or impact. Kritik will be used for out to submit drafts and provide feedback to peers.
 
 \subsubsection*{Project Stages}
 \begin{enumerate}
@@ -216,8 +239,7 @@ This course includes a scaffolded and peer-reviewed writing project where studen
     \end{itemize}
 \end{enumerate}
 
-\paragraph{} This project will help you develop your research, analytical, and writing skills while providing a deep understanding of policy theory and the policy process.
-
+\paragraph{} This project will help you develop your research, analytical, evaluative, and writing skills while providing a deep understanding of policy theory and the policy process. The project will also provide opportunities for peer review and feedback, enhancing your ability to provide and receive constructive criticism. 
 
 \subsection*{Midterm Exam (20\% of Final Grade)}
 An in-class midterm exam will be held in Week 8. The exam will cover material from the first half of the course, including readings, lectures, and discussions. The exam will consist of multiple-choice, short answer, and essay questions.
