--- a/POSC 521 MPA Capstone/2024-25 Fall/posc521_2024_fall.tex
+++ b/POSC 521 MPA Capstone/2024-25 Fall/posc521_2024_fall.tex
@@ -305,7 +305,7 @@ This AI policy is designed to align with our course objectives:
 
 \begin{itemize}
 
-\item \textbf{A Three-Stage Learning Journey:}
+\item \textbf{A Three-Stage Learning Process:}
 
 \begin{enumerate}
     \item Craft Your Analysis: Follow the provided rubric and delve into a public policy challenge. This could involve, for example, evaluating the ethical implications of a proposed environmental regulation or assessing the effectiveness of a social welfare program.
