--- a/POSC 521 MPA Capstone/2024-25 Fall/posc521_2024_fall.tex
+++ b/POSC 521 MPA Capstone/2024-25 Fall/posc521_2024_fall.tex
@@ -387,8 +387,8 @@ To facilitate class discussions and prepare you for comprehensive exams, your we
             \item Critical analysis rather than mere summaries.
             \item Identifying patterns, connections, and contradictions.
         \end{itemize}
-        \item Submit your draft to Canvas for peer review. Each student will be assigned two peers.
-        \item Review your peers' syntheses using the Canvas rubric. Provide kind, constructive, and specific feedback. The rubric is a guide; feel free to add additional comments.
+        \item Kritik will be used for peer review. Submit your synthesis to Kritik for peer feedback.
+        \item Using Kritik, provide constructive feedback to at least three classmates.
         \item Revise your synthesis based on peer feedback.
         \item Submit the revised synthesis to AI for feedback using the prompt:
         \textit{"I've synthesized information from [number] articles on [topic]. Here's my draft of the synthesis [insert draft]. Could you provide feedback and suggest any connections or contrasts I missed?"}
