--- a/POSC 315 Intro Policy/2024-25 Fall/posc315_fall_2024.tex
+++ b/POSC 315 Intro Policy/2024-25 Fall/posc315_fall_2024.tex
@@ -15,7 +15,7 @@
 \renewcommand\familydefault{\sfdefault}
 
 \begin{document}
-\title{\includegraphics[width=6cm]{/Users/dpadams/Repos/syllabi/Images/stacked.png} \\\vspace{1ex} \textbf{Introduction to Public Policy}}
+\title{\includegraphics[width=6cm]{/Users/dadams/repositories/syllabi/Images/stacked.png} \\\vspace{1ex} \textbf{Introduction to Public Policy}}
 
 \author{POSC 315-02 -- Fall 2024}
 \date{Tuesdays and Thursdays at 11:30 in MH 554 \\\vspace{2ex} \textsc{August 26 -- December 13, 2024}}
@@ -152,7 +152,7 @@ Students are expected to submit all assignments via \emph{Canvas}. If you cannot
 Students are responsible for retaining copies of all assignments submitted for this course. Students are also responsible for retaining copies of all graded assignments returned by the professor.
 
 \subsection*{Extra Credit}
- There is one bonus assignment available in this course. A documentary analysis assignment will be available in Week 15. The assignment is optional and will provide extra credit points on the final exam. The assignment will be graded based on the quality of the analysis and the depth of engagement with the course material.
+There is one bonus assignment available in this course. A documentary analysis assignment will be available in Week 15. The assignment is optional and will provide extra credit points on the final exam. The assignment will be graded based on the quality of the analysis and the depth of engagement with the course material.
 
 \subsection*{Academic Integrity}
 Students are expected to adhere to the highest standards of academic integrity. Any student found to have engaged in academic dishonesty will be subject to the sanctions described in the \href{https://www.fullerton.edu/senate/publications_policies_resolutions/ups/UPS%20300/UPS%20300.021.pdf}{Academic Dishonesty Policy} (UPS 300.021). Academic dishonesty includes, but is not limited to, cheating, plagiarism, fabrication, facilitating academic dishonesty, and submitting previously graded work without prior authorization. Students are expected to be familiar with the university's policy on academic dishonesty and to adhere to this policy in all aspects of this course. Any student who has questions about the policy should ask the professor for clarification.
@@ -163,8 +163,42 @@ All written work must be submitted in a professional format, including proper gr
 \subsection*{Plagiarism}
 Plagiarism is a serious violation of academic integrity and will not be tolerated in this course. Plagiarism includes, but is not limited to, copying and pasting text from sources without proper citation, paraphrasing text from sources without proper citation, and submitting work that is not your own. Students are expected to properly cite all sources used in their work and to submit original work. Failure to do so may result in a failing grade for the assignment and further disciplinary action. Written work will be checked for plagiarism using plagiarism detection software.
 
-\subsection*{AI Generated Text} 
-Large language models, such as OpenAI's ChatGPT-4o, Anthropic's Claude Opus 3, and others, have made it easier to generate text that mimics human writing. While these models can be useful for generating ideas and content, it is important for students to exercise caution and ensure that all work submitted in this course is their own. With the increasing proficiency of students in using these models, it is crucial to emphasize the importance of academic integrity and originality. Students are expected to use AI-generated text responsibly and to avoid any form of plagiarism. Failure to do so may result in severe consequences, including a failing grade for the assignment and further disciplinary action. Written work will be thoroughly checked for the use of AI-generated text using advanced plagiarism detection software. It is essential for students to uphold the highest standards of academic integrity and to produce their own original work.
+\subsection*{AI-Generated Text and Tool Usage Policy}
+
+\subsubsection*{Permissible Use of AI Tools}
+\textbf{Definition of AI Tools:} In this course, AI tools refer to any software or platform that generates or assists in generating text, ideas, research references, or content creation. This includes, but is not limited to, large language models like OpenAI’s ChatGPT-4, Anthropic’s Claude, AI-based research tools like RefWorks or EndNote, and writing assistants like Grammarly.
+
+\vspace{1ex}
+
+\noindent\textbf{Permissible Use Cases:} Students are allowed to use AI tools for brainstorming, generating ideas, checking grammar, and summarizing content. However, AI tools should not be used to produce final drafts of assignments or significant portions of text that are submitted as original work. If AI tools are used, their contributions must be appropriately cited and disclosed.
+
+\subsubsection*{Ethical Considerations}
+\textbf{Academic Integrity:} The use of AI tools must adhere to the highest standards of academic integrity. This means that while these tools can support your work, they cannot replace your own analysis, critical thinking, and original writing. Misuse of AI-generated content is a form of academic dishonesty and will be treated as such under the university's policies.
+
+\vspace{1ex}
+
+\noindent\textbf{Required Disclosures:} Students must disclose their use of AI tools in any assignments. This disclosure should include a brief explanation of how the tool was used and how the student ensured the integrity of their work. For example, a note might state, “I used ChatGPT to generate initial ideas for this essay, but all writing and analysis are my own.”
+
+\subsubsection*{Plagiarism and Originality}
+\textbf{AI Detection Tools:} Assignments will be checked for originality using advanced AI detection software. Any submission found to contain unoriginal content generated by AI without proper citation will be subject to the university's academic dishonesty policy. Submitting AI-generated text as your own work, without attribution, is considered plagiarism.
+
+\vspace{1ex}
+
+\noindent\textbf{Collaboration and AI Use:} While collaboration is encouraged in this course, any use of AI tools must be clearly documented, and all collaborators must agree on the use and citation of AI-generated content. Collaborative work that involves AI tools must be transparently disclosed in the submission.
+
+\subsubsection*{Guidance and Resources}
+\textbf{Ethical AI Usage Resources:} Students are encouraged to take advantage of available resources on responsible AI usage. This includes online tutorials, ethical guidelines, and citation practices. Workshops or additional materials on how to use AI tools responsibly may be provided throughout the course.
+
+\vspace{1ex}
+
+\noindent\textbf{Continuous Policy Review:} This AI policy will be reviewed and updated regularly to keep pace with technological advancements. Students are encouraged to provide feedback on this policy to ensure it aligns with their educational goals and the course's academic standards.
+
+\subsubsection*{Example Scenarios}
+\textbf{Acceptable Use:} A student uses Grammarly to check the grammar and clarity of their essay. The student does not need to disclose this use unless Grammarly significantly altered the content. Another student uses ChatGPT to brainstorm ideas but writes the essay independently, only citing the AI where directly quoted or paraphrased.
+
+\vspace{1ex}
+
+\noindent\textbf{Unacceptable Use:} A student uses ChatGPT to generate an entire essay and submits it as their own work without attribution. This would be considered a violation of the academic integrity policy and could result in a failing grade or further disciplinary action.
 
 \subsection*{Participation}
 
@@ -175,7 +209,7 @@ Students are expected to adhere to the university's policy on netiquette. The un
 \begin{quote}Netiquette refers to a set of behaviors that are appropriate for online activity (e.g., social media, email, discussions, presentations). All personnel at Cal State Fullerton are expected to demonstrate appropriate online behavior at all times. A good summary of netiquette can be found in the \href{https://canvashelp.fullerton.edu/m/Student/l/1336786-student-what-is-netiquette}{CSUF Canvas self-help guides}, which adapts ten rules to the online course situation from the website for the book \href{http://www.albion.com/netiquette/corerules.html}{Netiquette by Virginia Shea} and other sources referenced at the bottom of the guide.\end{quote}
 
 
-\section*{Kritik: Peer Review Platform}
+\section{Kritik: Peer Review Platform}
 
 \noindent This course will use the peer review platform \href{https://kritik.io/}{Kritik} for peer review assignments. Kritik is an online platform that allows students to provide feedback on their classmates' work. Students will be assigned to review the work of their peers and provide constructive feedback. Students will also receive feedback from their peers on their own work. The professor will use Kritik to monitor the peer review process and provide guidance as needed.
 
@@ -186,7 +220,7 @@ Students are expected to adhere to the university's policy on netiquette. The un
 
 \begin{itemize}
 
-\item \textbf{A Three-Stage Learning Journey:}
+\item \textbf{A Three-Stage Writing Process:}
 
 \begin{enumerate}
     \item Craft Your Analysis: Follow the provided rubric and delve into a public policy challenge. This could involve, for example, evaluating the ethical implications of a proposed environmental regulation or assessing the effectiveness of a social welfare program.
@@ -205,6 +239,7 @@ Students are expected to adhere to the university's policy on netiquette. The un
     \item \textbf{Expectations}: Students are expected to post a response to the prompt and engage with their classmates' posts. Discussion posts are due by 11:59 p.m. on Saturdays for the week they are assigned. Late posts will not be accepted.
     \item \textbf{Objectives}: Engage with course material, apply theoretical concepts to real-world scenarios, and develop critical thinking skills.
     \item \textbf{Grading Criteria}: Posts will be graded based on the quality of the response, depth of analysis, timeliness of contributions, and engagement with classmates' posts.
+    \item \textbf{Skipped Posts}: Students are expected to complete six of the eight discussion posts. Indicate a skipped post by submitting a blank post with the subject line "Skipped Post."
 \end{itemize}
 
 \subsection*{Policy Process Analysis Paper (35\% of Final Grade)}
