--- a/POSC 315 Intro Policy/2024-25 Fall/posc315_fall_2024.tex
+++ b/POSC 315 Intro Policy/2024-25 Fall/posc315_fall_2024.tex
@@ -35,7 +35,7 @@
 	\item email: \href{dpadams@fullerton.edu}{\texttt{dpadams@fullerton.edu}}
 	\item Office Hours:
         \begin{itemize}
-            \item Tuesdays and Thursdays: 1:00pm -- 2:00pm; Thursdays: 5:00pm -- 6:00pm
+            \item Tuesdays and Thursdays: 9:30 -- 11:00 a.m.; Thursdays: 5:00pm -- 6:00 p.m.
             \item Schedule meetings throughout the week: \href{https://dadams.io/appt}{\texttt{dadams.io/appt}}
         \end{itemize}  
 \end{itemize}
