kritik and canvas components for grading

--- a/POSC 521 MPA Capstone/2024-25 Fall/posc521_2024_fall.tex
+++ b/POSC 521 MPA Capstone/2024-25 Fall/posc521_2024_fall.tex
@@ -375,37 +375,64 @@ To facilitate class discussions and prepare you for comprehensive exams, your we
     \end{itemize}
 \end{itemize}
 
-\item \textbf{Synthesis}
+\item \textbf{Synthesis - Kritik Component}
 
 \begin{itemize}
-    \item \textbf{Purpose}: Integrate main themes and insights from weekly readings, discussing their implications for public administration. \textbf{This portion of the assignment conducted on the Kritik platform. All papers should be submitted anonymously to ensure unbiased feedback.}
-   
+    \item \textbf{Purpose}: Integrate main themes and insights from weekly readings, discussing their implications for public administration. This component will be conducted on the Kritik platform, and all papers should be submitted anonymously to ensure unbiased feedback.
+    
     \item \textbf{Process}:
     \begin{itemize}
         \item Write a 3- to 5-page synthesis, focusing on:
         \begin{itemize}
             \item Critical analysis rather than mere summaries.
-            \item Identifying patterns, connections, and contradictions.
+            \item Identifying patterns, connections, and contradictions across the readings.
         \end{itemize}
-        \item Kritik will be used for peer review. Submit your synthesis to Kritik for peer feedback.
-        \item Using Kritik, provide constructive feedback to at least three classmates.
-        \item Revise your synthesis based on peer feedback.
-        \item Submit the revised synthesis to AI for feedback using the prompt:
-        \textit{"I've synthesized information from [number] articles on [topic]. Here's my draft of the synthesis [insert draft]. Could you provide feedback and suggest any connections or contrasts I missed?"}
-        \item \emph{Revising a second time based on AI feedback is optional and ungraded.}
-        \item Submit your final synthesis \emph{and} the AI's feedback to Canvas for grading.
+        \item Submit your synthesis to Kritik for peer feedback.
+        \item Provide constructive feedback to at least three classmates through Kritik.
+        \item Revise your synthesis based on peer feedback received through Kritik.
     \end{itemize}
+    
+    \item \textbf{Submission}:
+    \begin{itemize}
+        \item Submit your initial synthesis to Kritik for peer review and feedback.
+        \item Complete peer reviews on at least three classmates' submissions.
+        \item Revise your synthesis based on the feedback received from Kritik peer reviews.
+    \end{itemize}
+    
     \item \textbf{Grading}:
     \begin{itemize}
-        \item \textbf{Completeness}: Addresses all required components.
-        \item \textbf{Critical Analysis}: Offers insightful and thoughtful analysis.
-        \item \textbf{Clarity}: Communicates ideas clearly and effectively.
-        \item \textbf{Citation}: Properly cites sources in APA or Chicago author-date style.
-        \item \textbf{Peer Review}: Provides constructive feedback to peers.
-        \item \textbf{Revision}: Incorporates peer and (optional) AI feedback effectively.
+        \item Your grade will be based on the quality of your synthesis, participation in peer reviews, and the revisions made based on feedback.
     \end{itemize}
-    The synthesis, peer review, and AI feedback will be graded as a single assignment. Your revised synthesis will be evaluated using the Canvas rubric.
 \end{itemize}
+
+\item \textbf{Synthesis - Canvas Component}
+
+\begin{itemize}
+    \item \textbf{Purpose}: Submit the revised synthesis after peer review, ensuring that the final version reflects thoughtful analysis and consideration of previous feedback.
+    
+    \item \textbf{Process}:
+    \begin{itemize}
+        \item After revising your synthesis from the Kritik peer reviews, submit it to an AI tool for feedback using the following prompt:
+        
+        \textit{"I've synthesized information from [number] articles on [topic]. Here's my draft of the synthesis [insert draft]. Could you provide feedback and suggest any connections or contrasts I might have missed?"}
+        
+        \item You must include the AI feedback output with your final submission to Canvas.
+        \item Revising your synthesis based on AI feedback is optional but encouraged for improvement.
+    \end{itemize}
+    
+    \item \textbf{Submission}:
+    \begin{itemize}
+        \item Submit your revised synthesis \emph{along with the AI feedback output} to Canvas for grading.
+        \item Ensure that both the final paper and the AI feedback are submitted in a single file to Canvas.
+    \end{itemize}
+    
+    \item \textbf{Grading}:
+    \begin{itemize}
+        \item Your Canvas grade will be based on the quality of your synthesis and submission of the AI feedback.
+        \item Updating your synthesis based on AI feedback is optional and will not impact the grade.
+    \end{itemize}
+\end{itemize}
+
 
 \item \textbf{Bonus Point Reflection Activity} (Optional)
 
@@ -491,8 +518,8 @@ A peer review process will be used to provide feedback on each component of the 
     \end{itemize}
     \item \textbf{Peer Review:}
     \begin{itemize}
-        \item Submit a draft for peer review on Canvas.
-        \item Provide constructive feedback to at least two classmates.
+        \item Submit a draft for peer review on Kritik.
+        \item Provide constructive feedback to at least three classmates.
         \item Revise your literature review based on the feedback received.
     \end{itemize}
     \item \textbf{Final Draft Deliverable:}
@@ -570,7 +597,8 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
         \toprule
     \textbf{Assignment} & \textbf{Percentage} \\
     \midrule
-    Weekly Annotated Bibliographies & 10\% \\
+    Weekly Annotated Bibliographies & 5\% \\
+    Weekly Kritik Assignment & 5\% \\
     Weekly Syntheses & 15\% \\
     Reading Discussion Facilitation & 5\% \\
     MPA Comprehensive General Area Essay Exam & 35\% \\
