new lit review assignment

--- a/POSC 521 MPA Capstone/2024-25 Fall/posc521_2024_fall.tex
+++ b/POSC 521 MPA Capstone/2024-25 Fall/posc521_2024_fall.tex
@@ -480,10 +480,7 @@ Students will complete a comprehensive general area essay exam as part of the MP
 
 \subsubsection*{Literature Review}
 
-Students will complete a literature review in their concentration area as part of the MPA program's comprehensive exam requirement. The literature review will examine the practical and theoretical issues related to a specific public administration topic and synthesize the essential findings and debates in the literature. The literature review will allow students to deepen their knowledge of their concentration area and develop their research and writing skills. The length of the literature review will be approximately 15 pages, double-spaced, in APA or Chicago author-date style.
-
-A peer review process will be used to provide feedback on each component of the literature review, including the topic selection, annotated bibliography, draft, and final draft. The peer review process will help students refine their work and improve their writing and analytical skills. The final draft of the literature review will be graded based on the following criteria. All submissions should be anonymous to ensure unbiased feedback.
-
+Students will complete a literature review in their concentration area as part of the MPA program's comprehensive exam requirement. The literature review will examine practical and theoretical issues related to a specific public administration topic and synthesize essential findings and debates in the literature. This assignment allows students to deepen their knowledge of their concentration area and develop their research and writing skills. The literature review should be approximately 15 pages, double-spaced, in APA or Chicago author-date style.
 
 \paragraph*{Objectives:}
 \begin{itemize}
@@ -497,46 +494,72 @@ A peer review process will be used to provide feedback on each component of the 
     \item \textbf{Topic Selection:}
     \begin{itemize}
         \item Choose a topic within your concentration area in consultation with the professor.
-        \item Ensure the topic addresses both practical and theoretical dimensions.
+        \item Ensure the topic addresses both practical and theoretical dimensions of public administration.
+        \item Formulate a clear research question that guides your literature review.
+    \end{itemize}
+    \item \textbf{Annotated Bibliography:}
+    \begin{itemize}
+        \item Compile an annotated bibliography of at least 10-12 peer-reviewed sources.
+        \item Provide a summary and critical evaluation of each source's relevance to your research question.
     \end{itemize}
     \item \textbf{Theoretical Book Requirement:}
     \begin{itemize}
-        \item Select a theoretical book related to your concentration area as part of your literature review.
-        \item Include an analysis of the book's contribution to the field and how it relates to your topic.
+        \item Select a theoretical book related to your concentration area to incorporate into your literature review.
+        \item Analyze the book’s contribution to the field and its relevance to your topic.
     \end{itemize}
     \item \textbf{Literature Sources:}
     \begin{itemize}
         \item Utilize a minimum of 15 peer-reviewed articles or books.
-        \item Incorporate recent studies to ensure up-to-date analysis.
+        \item Incorporate recent studies to ensure an up-to-date analysis of the topic.
     \end{itemize}
     \item \textbf{Structure:}
     \begin{itemize}
-        \item Introduction: State the research question and its significance.
-        \item Literature Review: Summarize and synthesize key findings and debates.
-        \item Analysis: Critically evaluate the literature, identifying gaps and future research directions.
-        \item Conclusion: Summarize the main findings and their implications for public administration.
-    \end{itemize}
-    \item \textbf{Peer Review:}
-    \begin{itemize}
-        \item Submit a draft for peer review on Kritik.
-        \item Provide constructive feedback to at least three classmates.
-        \item Revise your literature review based on the feedback received.
+        \item \textbf{Introduction:} State the research question and discuss its significance in the field of public administration.
+        \item \textbf{Literature Review:} Summarize and synthesize key findings and debates from the literature, demonstrating an understanding of both practical and theoretical perspectives.
+        \item \textbf{Analysis:} Critically evaluate the literature, identify gaps, and discuss possible directions for future research.
+        \item \textbf{Conclusion:} Summarize the main findings and their implications for public administration theory and practice.
     \end{itemize}
     \item \textbf{Final Draft Deliverable:}
     \begin{itemize}
-        \item Submit a final draft of your literature review on Canvas.
-        \item Ensure the final draft meets the requirements outlined in the assignment guidelines.
+        \item Submit the final draft of your literature review on Canvas by the deadline specified in the course syllabus.
+        \item Ensure that the final draft adheres to all assignment requirements and is professionally formatted.
     \end{itemize}
 \end{enumerate}
 
-\paragraph*{Submission:}
+\paragraph*{Submission Timeline:}
 \begin{itemize}
-    \item Topic Outline: Week 12
-    \item Annotated Bibliography: Week 13
-    \item First Draft: Week 14
-    \item Peer Review: Week 15
-    \item Final Draft: Week 16
+    \item \textbf{Topic Outline:} Due Week 12
+    \item \textbf{Annotated Bibliography:} Due Week 13
+    \item \textbf{First Draft:} Due Week 14
+    \item \textbf{Final Draft:} Due Week 16
 \end{itemize}
+
+\subsubsection*{Example Term Paper Research Questions by Concentration}
+
+\paragraph*{1. Public Policy}
+\begin{itemize}
+    \item \textbf{Research Question:} How do stakeholder engagement processes influence the implementation of environmental policies at the local level?
+    \item \textbf{Explanation:} This question allows the student to explore both the practical aspects (stakeholder engagement) and theoretical dimensions (policy implementation models) of public policy.
+\end{itemize}
+
+\paragraph*{2. Local Government Management}
+\begin{itemize}
+    \item \textbf{Research Question:} What are the most effective strategies for improving intergovernmental collaboration in metropolitan regions?
+    \item \textbf{Explanation:} This question addresses the practical challenges of collaboration between local governments and evaluates the theoretical frameworks for intergovernmental relations.
+\end{itemize}
+
+\paragraph*{3. Public Finance}
+\begin{itemize}
+    \item \textbf{Research Question:} How does participatory budgeting affect fiscal transparency and public trust in local governments?
+    \item \textbf{Explanation:} The question allows exploration of the impact of participatory processes on financial governance, connecting theoretical insights with real-world financial practices.
+\end{itemize}
+
+\paragraph*{4. Human Resources (HR)}
+\begin{itemize}
+    \item \textbf{Research Question:} What role do diversity and inclusion policies play in reducing turnover in public sector organizations?
+    \item \textbf{Explanation:} This question allows the student to analyze how diversity policies are implemented in public HR and to evaluate their theoretical effectiveness on employee retention.
+\end{itemize}
+
 
 \section{Course Requirements Due Dates}
 
